#815: Optimize 'Cfg'.